--- a/packages/app/Scarb.toml
+++ b/packages/app/Scarb.toml
@@ -6,6 +6,7 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+protocol = { path = "../protocol" }
 
 [dev-dependencies]
 cairo_test = "2.7.0"
